--- a/package.json
+++ b/package.json
@@ -15,9 +15,17 @@
     "@types/socket.io": "^3.0.2",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "express": "^4.17.1",
+    "path": "^0.12.7",
+    "socket.io": "^4.4.0"
   },
   "dependencies": {
+    "@types/express": "^4.17.13",
+    "@types/socket.io": "^3.0.2",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2",
     "express": "^4.17.1",
     "path": "^0.12.7",
     "socket.io": "^4.4.0"
